Note about mcdoc / mcgui integration
git-svn-id: https://svn.mccode.org/svn/McStasTeX@33 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -185,7 +185,10 @@ section~\ref{s:comp-overview}.
    instrument obtained from the \verb+Res_sample+ and \verb+Res_monitor+ components.
    In version \version, it only works with the McStas/PGPLOT format, 
    but a port for Scilab/Matlab is under way. \index{Tools!mcresplot}
-\item \verb+mcdoc+ can now display an HTML catalog of the current library, as well as help for single components. \index{Tools!mcdoc}
+\item \verb+mcdoc+ can now display the pdf version of the manual, an
+  HTML catalog of the current library, as well as help for single
+  components. \index{Tools!mcdoc} The \verb+mcdoc+ functions have been
+  closely integrated into \verb+mcgui+. 
 \end{itemize}
 
 \section{Future extensions}
