Oops - had Collimator_linear already. Removed refs to _straight again
git-svn-id: https://svn.mccode.org/svn/McStasTeX@34 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/comp_removed.tex
+++ b/trunk/comp_removed.tex
@@ -86,7 +86,7 @@ Arm                &  Arm/optical bench \\
  Chopper           &   Disk chopper. \\
  Chopper\_Fermi     &   Fermi Chopper with
                       curved slits. \\
- Collimator\_straight &  A simple analytical Soller collimator
+ Collimator\_linear &  A simple analytical Soller collimator
                       (with triangular
                       transmission).  \\
  Filter\_gen        &   This components may
