--- a/trunk/comp_removed.tex
+++ b/trunk/comp_removed.tex
@@ -327,12 +327,12 @@ TOFlog\_mon      &    Rectangular Time-of-flight
       \hline
        MCSTAS/data & Description \\ 
        \hline
- .lau & Laue pattern file, as issued from Crystallographica or FullProf
-       data: [ h   k   l Mult. d-space 2Theta   F-squared ] \\
- .trm & transmission file, typically for monochromator crystals and filters
-       data: [ k (Angs-1) , Transmission (0-1) ] \\
- .rfl & reflectivity file, typically for mirrors and monochromator crystals
-       data: [ k (Angs-1) , Reflectivity (0-1) ] \\       
+ .lau & Laue pattern file, as issued from Crystallographica or FullProf.
+       Data: [ h   k   l Mult. d-space 2Theta   F-squared ] \\
+ .trm & transmission file, typically for monochromator crystals and filters.
+       Data: [ k (Angs-1) , Transmission (0-1) ] \\
+ .rfl & reflectivity file, typically for mirrors and monochromator crystals.
+       Data: [ k (Angs-1) , Reflectivity (0-1) ] \\       
       \hline
     \end{tabular}
     \caption{Data files of the \MCS\ library.}
