Last updates before mcstas-1.7. Cleaning up datablad.tex, coherent titles (risoe-rep-title, datablad), update of release date in README.... Here we go! :)
git-svn-id: https://svn.mccode.org/svn/McStasTeX@37 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/risoe-rep-title.tex
+++ b/trunk/risoe-rep-title.tex
@@ -40,6 +40,7 @@
 \title{User~and~Programmers~Guide~to~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
  \MCS, Version \version\ }
-\author{Kim Lefmann, Peter Willendrup, Emmanuel Farhi\\ Mark Hagen, Per-Olof {\AA}strand, and Kristian Nielsen}
+\author{Peter Willendrup, Emmanuel Farhi, Kim Lefmann,\\ Per-Olof
+ {\AA}strand, Marc Hagen and Kristian Nielsen}
 \maketitle
 \endgroup
