--- a/trunk/datablad.tex
+++ b/trunk/datablad.tex
@@ -58,13 +58,8 @@ Telefax +45 4677 4013
 \begin{datablad}
 \titel{User and Programmers Guide to the Neutron Ray-Tracing Package
  \MCS , Version 1.7}
-<<<<<<< datablad.tex
-\forfatter{Peter Kj\ae r Willendrup, Emmanuel Farhi, Kim Lefmann, Per-Olof \AA strand, Mark Hagen, and Kristian Nielsen}
+\forfatter{Peter Kj\ae r Willendrup, Emmanuel Farhi, Kim Lefmann, Per-Olof \AA strand, Mark Hagen and Kristian Nielsen}
 \isbn{87--550--2929--9; 87--550--2930--2 (Internet)}\issn{0106--2840}
-=======
-\forfatter{Per-Olof \AA strand, Kim Lefmann, Emmanuel Farhi, Kristian Nielsen}
-\isbn{87--550--3230--3; 87--550--3231--1 (Internet)}\issn{0106--2840}
->>>>>>> 1.4
 \afdeling{Materials Research Department}
 \dato{\reldate}
 \regnummer{---}
