--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -354,6 +354,12 @@ Name & Value & Conversion from & Conversion to \\ \hline
   & Full width half maximum & Root mean square (standard deviation) \\
 \textvb{RMS2FWHM} & $\sqrt{8\log(2)}$ 
   & Root mean square (standard deviation) & Full width half maximum \\
+\textvb{MNEUTRON} & $1.67492E-27 kg$ 
+  & Neutron mass & \\
+\textvb{HBAR} & $1.05459E-34 Js$ 
+  & Planck constant & \\
+\textvb{PI} & $3.14159265358979323846$ 
+  & $\pi$ & \\
 \hline
 \end{tabular}
 \end{center}
