--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -1015,7 +1015,7 @@ which is where simulations put their results by default. If the
 section~\ref{s:run-sim}), the name of the file or directory should be
 passed to mcplot, {\em e.g.} ``\texttt{mcplot {\it dir}}'' or ``\texttt{mcplot
   {\it file}}''.
-It is also possible to plot one single data file from a given monitor, passing its name to mcplot.
+It is also possible to plot one single text (not binary) data file from a given monitor, passing its name to mcplot.
 
 The drawing back-end program may be selected among PGPLOT, Matlab and Scilab using either the -p{\it PLOTTER} option (e.g. \verb+mcplot -pScilab file+) or using the current \verb+MCSTAS_FORMAT+ environment variable. \index{Environment variable!MCSTAS\_FORMAT} Moreover, the drawing back-end program will also be set depending on the {\it file} extension (see table~\ref{t:formatoptions}).
 
